# Ancora

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  task.yml
.github/workflows/: ci.yml
deploy/docker/: docker-compose.yml
deploy/scheduler/: policy.yaml
docs/: IMPLEMENTATION-PLAN.md  PROJECT-PLAN-github-issues.md  RFC-0001-durable-ai-runtime.md  RFC-0001a-architecture-review.md  index.md
docs/adr/: 0000-template.md  README.md
scripts/: e2e_phase1.py  e2e_phase2.py
services/activity-workers/: Dockerfile  README.md  pyproject.toml
services/activity-workers/ancora_activity_worker/: __init__.py  activities.py  main.py  nodes_runtime.py  ray_bridge.py  recorder.py  registration.py  runtime.py  settings.py  tasks.py
services/activity-workers/tests/: conftest.py  test_async_completion.py  test_inline_checkpoint.py  test_kill_scenarios.py  test_nodes_runtime.py  test_ray_bridge.py
services/api-gateway/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api-gateway/ancora_api/: __init__.py  approval_service.py  chaos.py  cost_service.py  db.py  deps.py  graph.py  history.py  idempotency.py  logging.py  main.py  models.py  recovery.py  schemas.py  service.py  settings.py  worker_service.py
services/api-gateway/ancora_api/routers/: approvals.py  chaos.py  plugins.py  runs.py  workers.py  workflows.py
services/api-gateway/migrations/: env.py
services/api-gateway/migrations/versions/: 0001_base_tables.py  0002_workflow_tables.py  0003_worker_registry.py  0004_inbox_idempotency.py  0005_cost_approvals_retries.py
services/api-gateway/tests/: test_chaos.py  test_graph.py  test_health.py  test_recovery.py
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/ancora_scheduler/: __init__.py  api.py  backlog.py  budget.py  config.py  engine.py  fairness.py  main.py  metrics.py  settings.py
services/scheduler/tests/: test_api.py  test_config.py  test_engine.py
services/workflow-workers/: Dockerfile  README.md  pyproject.toml
services/workflow-workers/ancora_worker/: __init__.py  catalog_report.py  examples.py  gate_activities.py  main.py  settings.py
services/workflow-workers/tests/: conftest.py  test_hello_workflow.py  test_human_gate.py  test_replay.py  test_research_agent.py  test_worker_kill.py
web/: .env.example  Dockerfile  _shot_demo.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api-docs/: page.tsx
web/app/approvals/: page.tsx
web/app/chaos/: page.tsx
web/app/demo/: page.tsx
web/app/health/: page.tsx
web/app/history/: page.tsx
web/app/nodes/: page.tsx
web/app/runs/: page.tsx
web/app/runs/[id]/: page.tsx
web/app/workers/: page.tsx
web/app/workflows/: page.tsx
web/components/: nav.tsx  placeholder.tsx  recovery-timeline.tsx  resilience-story.tsx  run-dag.tsx  run-inspector.tsx  status-badge.tsx  system-flow.tsx  top-bar.tsx  ui.tsx
web/lib/: api.ts  demo.ts  nav.ts  utils.ts
web/public/: openapi.json
web/tests/: smoke.spec.ts
