# Ancora — uv workspace root.
# This root is NOT an installable package (package = false); it only ties the
# member packages/services together and holds shared tooling config.
[project]
name = "ancora-monorepo"
version = "0.1.0"
description = "Ancora — a fault-tolerant runtime for durable AI workflows (workspace root)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "services/*"]

# Intra-workspace packages resolve to local source, not PyPI.
[tool.uv.sources]
ancora = { workspace = true }
ancora-common = { workspace = true }
ancora-cli = { workspace = true }
ancora-api = { workspace = true }
ancora-worker = { workspace = true }
ancora-activity-worker = { workspace = true }

[dependency-groups]
# Shared dev toolchain, installed into the workspace virtualenv via `uv sync`.
dev = [
    "ruff==0.9.6",
    "mypy==1.15.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "pre-commit==4.1.0",
]

# ---------------------------------------------------------------------------
# Shared tool configuration (applies repo-wide).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear, comprehensions, simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# E501: line length handled by formatter.
# B008: function calls in argument defaults are the intended FastAPI/Typer
#       dependency-injection idiom (Depends/Header/Query/Argument).
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["ancora", "ancora_api", "ancora_cli", "ancora_common", "ancora_worker", "ancora_activity_worker"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
exclude = ["migrations/versions", "build/"]
# Each workspace package has its own source root; listing them as bases (and
# checking library source explicitly, not the whole tree) avoids the editable-install
# "source file found twice under different module names" collision.
mypy_path = [
    "packages/sdk-python",
    "packages/common",
    "packages/cli",
    "services/api-gateway",
    "services/workflow-workers",
    "services/activity-workers",
]
files = [
    "packages/sdk-python/ancora",
    "packages/common/ancora_common",
    "packages/cli/ancora_cli",
    "services/api-gateway/ancora_api",
    "services/workflow-workers/ancora_worker",
    "services/activity-workers/ancora_activity_worker",
]

[[tool.mypy.overrides]]
# Third-party libs without stubs — don't fail the strict gate on them.
module = ["ray.*", "temporalio.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q"
testpaths = ["packages", "services"]
markers = [
    "temporal: tests that need a Temporal test server (downloaded on first run)",
]
