[project]
name = "ancora-scheduler"
version = "0.1.0"
description = "Ancora scheduler — admission control: rate limits, backpressure, fairness, budgets."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.6",
    "pydantic-settings>=2.7",
    # Declarative policy documents (AN-048) are JSON or YAML.
    "pyyaml>=6.0",
    "ancora-common",
    # Capability/queue names and the priority lane table are shared with workflows.
    "ancora",
    # Dev hot-reload wrapper for the local Docker stack (see docker-compose.yml).
    "watchfiles>=0.24",
]

[project.scripts]
ancora-scheduler = "ancora_scheduler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ancora_scheduler"]
